<resources>

    <string name="facebook_app_id" translatable="false">412969433456406</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb412969433456406</string>

    <string-array name="cars">
        <item>car1</item>
        <item>car2</item>
        <item>car3</item>
        <item>car4</item>
        <item>car5</item>
    </string-array>
    <string name="app_name">Markoup</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="login">login</string>
    <string name="registerAsNewDriver">Register as new driver</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="enterPhoneNumber">Enter phone number</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="skip">Skip</string>
    <string name="enter_your_name">Enter your name (e.g. Ahmed)</string>
    <string name="wrong_credintials">wrong username or password</string>
    <string name="enter_departure_station">Enter Departure Station</string>
    <string name="enter_arrival_station">Enter Arrival Station</string>
    <string name="find_driver">Find Driver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_voyage_date">Choose Voyage Date</string>
    <string name="book_now">Book Now</string>
    <string name="type_mercedes">Type: Mercedes</string>
    <string name="customer_service">Customer Service</string>
    <string name="ratings_and_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="invite_friends">Invite Friends</string>
    <string name="my_account">My Account</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="_1_hour_to_destination">1 Hour to destination</string>
    <string name="_5_minutes_to_station">5 Minutes to station</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="vehicle_number">Vehicle Number:</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="from">To</string>
    <string name="Misrata">Mistratah</string>
    <string name="Moary">Moary</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="_35_dienar">35 Dienar</string>
    <string name="time_left">1 hour left for the trip</string>
    <string name="trip_date">Trip date:</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="upload_identification_id">Upload Identification ID</string>
    <string name="upload">upload</string>
    <string name="register_as_company">Register as Company</string>
    <string name="forget_paas">Forgot password ?</string>
    <string name="enter_email">please enter your email</string>
    <string name="matcher_email">please make your email like this example@example.com</string>
    <string name="required_filed">this filed is required</string>
    <string name="password_matcher">please make your password greater than 8 char</string>
    <string name="example_example_com">example@example.com</string>
    <string name="fb_excit">your account is exist</string>

    <string-array name="voyage_filter">
        <item>Rating</item>
        <item>Individuals</item>
        <item>Transportation Companies</item>
    </string-array>
</resources>