<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_my_account"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/nav_ratings"
            android:icon="@drawable/ic_bulb"
            android:title="@string/ratings_and_reviews" />
        <item
            android:id="@+id/nav_customerService"
            android:icon="@drawable/ic_bulb"
            android:title="@string/customer_service" />

    </group>
</menu>