<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".IDActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_225sdp"
            android:src="@drawable/ic_welcoming_vector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:fontFamily="@font/cairo"
            android:text="@string/upload_identification_id"
            android:textColor="@color/colorPrimary"

            />

        <Button
            android:id="@+id/button_next_email_registeration"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_upload"
            android:drawablePadding="@dimen/_5sdp"
            android:background="@color/colorPrimary"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_skip_email_regesteration"
            android:layout_width="@dimen/_180sdp"
            android:fontFamily="@font/cairo"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            tools:targetApi="lollipop" />
    </LinearLayout>
</layout>