<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SocialActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_225sdp"
            android:src="@drawable/ic_welcoming_vector" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:fontFamily="@font/cairo"
            android:text="@string/enter_confirmation_code"
            android:textColor="@color/colorPrimary"

            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_28sdp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_user_email"
                android:fontFamily="@font/cairo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_next_email_registeration"
            android:fontFamily="@font/cairo"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_skip_email_regesteration"
            android:layout_width="@dimen/_180sdp"
            android:fontFamily="@font/cairo"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            tools:targetApi="lollipop" />

        <ImageButton
            android:layout_marginHorizontal="@dimen/_55sdp"
            android:id="@+id/button_fb"
            android:layout_width="match_parent"
            android:fontFamily="@font/cairo"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/fb"
            tools:targetApi="lollipop" />

        <ImageButton
            android:layout_marginHorizontal="@dimen/_55sdp"
            android:id="@+id/button_google"
            android:layout_width="match_parent"
            android:fontFamily="@font/cairo"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/google"
            tools:targetApi="lollipop" />

    </LinearLayout>
</layout>